style/app.css
@import url('../submodules/blacklist/blacklist.css');
@import url('../submodules/device/device.css');
@import url('../submodules/user/user.css');
@import url('../submodules/misc/misc.css');
@import url('../submodules/device/device.css');
@import url('../submodules/faxbox/faxbox.css');
@import url('../submodules/directory/directory.css');
@import url('../submodules/timeofday/timeofday.css');
@import url('../submodules/groups/groups.css');
@import url('../submodules/featurecodes/featurecodes.css');
@import url('../submodules/temporalset/temporalset.css');
/* style.css */
#ws_callflow > .callflow {
	float: left;
	width: 85%;
}

#ws_callflow .callflow .root,
.callflow-preview  .callflow .root {
	width: 322px;
}

#ws_callflow .callflow .root > .top_bar,
.callflow-preview .callflow .root > .top_bar {
	background-image: url(static/images/blue_bar.png);
	height: 25px;
	text-align: left;
}

#ws_callflow .callflow .root > .top_bar > span,
.callflow-preview .callflow .root > .top_bar > span {
	line-height: 25px;
}

#ws_callflow .callflow .root > .top_bar .name,
.callflow-preview .callflow .root > .top_bar .name {
	float: left;
	margin-left: 10px;
	font-weight: bold;
	cursor: default;
}

#ws_callflow .callflow .root > .top_bar .add_number,
.callflow-preview .callflow .root > .top_bar .add_number {
	float: right;
}

#ws_callflow .callflow .root > .content .number_row,
.callflow-preview .callflow .root > .content .number_row {
	background-image: url(static/images/nav_line_horizontal.jpg);
	background-position: bottom;
	background-repeat: repeat-x;
	height: 32px;
	background-color: #424242;
}

#ws_callflow .callflow .root > .content .number_row:last-child {
	background: none;
	background-color: #424242;
	height: 30px;
	border-radius: 0px 0px 2px 2px;
}

.callflow-preview .callflow .root > .content .number_row:last-child:not(:first-child) {
	display: none !important;
}

#ws_callflow .callflow .root > .content .number_column,
.callflow-preview .callflow .root > .content .number_column {
	float: left;
	height: 30px;
	line-height: 30px;
	font-size: 11px;
	text-indent: 15px;
	text-align: left;
	position: relative;
}

#ws_callflow .callflow .root > .content .number_column.full,
.callflow-preview .callflow .root > .content .number_column.full {
	width: 312px;
	text-align: center;
}

#ws_callflow .callflow .root > .content .number_column.second,
.callflow-preview .callflow .root > .content .number_column.second {
	width: 163px;
	background-image: url(static/images/nav_line.jpg);
	background-position: left;
	background-repeat: repeat-y;
}

#ws_callflow .callflow .root > .content .number_column.first,
.callflow-preview .callflow .root > .content .number_column.first {
	width: 159px;
}

#ws_callflow .callflow .root > .content .number_column.empty,
.callflow-preview .callflow .root > .content .number_column.empty {
	color: #A0A0A0;
	cursor: default;
}

#ws_callflow .callflow .root > .content .number_column .delete,
.callflow-preview .callflow .root > .content .number_column .delete {
	background-image: url(static/images/btn_delete.png);
	background-repeat: no-repeat;
	background-position: center;
	width: 6px;
	height: 6px;
	display: inline-block;
	position: absolute;
	padding: 5px;
	right: 0px;
	top: 0px;
	cursor: pointer;
}

#ws_callflow .callflow .root > .content .number_column .delete:hover,
.callflow-preview .callflow .root > .content .number_column .delete:hover {
	background-image: url(static/images/btn_delete_blue.png);
}

.callflow-preview span.delete,
.callflow-preview .number_column.empty,
.callflow-preview span.edit_icon {
	display: none !important;
}

#ws_callflow .callflow .node,
.callflow-preview .callflow .node {
	display: inline-block;
	cursor: -moz-grab;
	cursor: -webkit-grab;
	cursor: grab;
}

#ws_callflow .callflow .node.disabled,
.callflow-preview .callflow .node.disabled {
	opacity: 0.6;
}

#ws_callflow .callflow .node[name="root"],
.callflow-preview .callflow .node[name="root"] {
	cursor: default;
}

#ws_callflow .callflow .node .node-options .delete,
.callflow-preview .callflow .node .node-options .delete {
	background-image: url(static/images/btn_delete.png);
	background-repeat: no-repeat;
	background-position: center;
	width: 6px;
	height: 6px;
	position: absolute;
	top: 0px;
	right: 0px;
	padding: 5px;
	cursor: pointer;
}

#ws_callflow .callflow .node .node-options .delete:hover,
.callflow-preview .callflow .node .node-options .delete:hover {
	background-image: url(static/images/btn_delete_blue.png);
}

#ws_callflow .tool .icon,
.callflow-preview .tool .icon {
	margin: 2px;
	display: inline-block;
}

#ws_callflow .tools .category,
.callflow-preview .tools .category {
	text-align: center;
	background: url(static/images/background_category.png) no-repeat;
	background-position: top center;
	cursor: default;
}

#ws_callflow .tools .category .content,
.callflow-preview .tools .category .content {
	background-color: #777777;
	border: 1px solid #333333;
}

#ws_callflow .tools .open,
.callflow-preview .tools .open {
	font-size: 12px;
	height: 26px;
	line-height: 26px;
	background-repeat: no-repeat;
	background-position: 5px center;
}

#ws_callflow .tools .active .open,
.callflow-preview .tools .active .open {
	background-image: url(static/images/arrow_active.png);
	color: #22A5FF;
}

#ws_callflow .tools .inactive .open,
.callflow-preview .tools .inactive .open{
	background-image: url(static/images/arrow_inactive.png);
}

#ws_callflow .tools .tool,
.callflow-preview .tools .tool {
	background: #777777;
	float: left;
	width: 82px;
	padding-left: 1px;
	padding-top: 1px;
	cursor: -moz-grab;
	cursor: -webkit-grab;
	cursor: grab;
}

#ws_callflow .destination,
.callflow-preview .destination {
	border-radius: 2px;
	border: 3px solid #22A5FF;
}

#ws_callflow .tools .tool .action,
.callflow-preview .tools .tool .action {
	z-index: 19;
	height:56px;
	background: url(static/images/blackbox_small.png) no-repeat;
	min-width: 82px;
}
/* ... */

